unpackaged/main/default/objects/Account/fields/Sports_Opps_Won__c.field-meta.xml
<CustomField>
    <fullName>Sports_Opps_Won__c</fullName>
    <description>Sports Turf Opportunities &quot;Won&quot; this Fiscal Year</description>
    <inlineHelpText>Sports Turf Opportunities &quot;Won&quot; this Fiscal Year</inlineHelpText>
    <label>Sports Opps Won</label>
    <summarizedField>Opportunity.Total_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Sports Opp - Maintenance, Sports Opp - Construction</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>greaterOrEqual</operation>
        <value>10/1/2019</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>lessOrEqual</operation>
        <value>9/30/2020</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>