unpackaged/main/default/objects/Account/fields/Sports_Turf_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Sports_Turf_Catalog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sports Turf Catalog</label>
    <type>Checkbox</type>
</CustomField>