unpackaged/main/default/objects/Account/fields/Statement_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Statement_Cycle__c</fullName>
    <description>Based on the GP Customer Statement Cycle Code (text values defined by GP to match with numeric code)</description>
    <label>Statement Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Statement</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Biweekly</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Bi-Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>