unpackaged/main/default/objects/Account/fields/Steel_Green_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Steel_Green_Purchase_Date__c</fullName>
    <inlineHelpText>Date of first unit purchase</inlineHelpText>
    <label>Steel Green Purchase Date</label>
    <type>Date</type>
</CustomField>