unpackaged/main/default/objects/Account/fields/Storage_Agreement_Contact__c.field-meta.xml
<CustomField>
    <fullName>Storage_Agreement_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Storage Agreement Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Storage Agreement Contact)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>