unpackaged/main/default/objects/Account/fields/Storage_Agreement_Flagged__c.field-meta.xml
<CustomField>
    <fullName>Storage_Agreement_Flagged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the ERP was updated with Storage Agreement Status</description>
    <label>Storage Agreement Flagged?</label>
    <type>Checkbox</type>
</CustomField>