unpackaged/main/default/objects/Account/fields/Storage_Agreement_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Storage_Agreement_Sent_Date__c</fullName>
    <description>Date that Storage Agreement was sent</description>
    <label>Storage Agreement Sent Date</label>
    <type>Date</type>
</CustomField>