unpackaged/main/default/objects/Account/fields/Storage_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Storage_Agreement_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates we have received a Conga Sign document back from the Customer with a signature for the EOP Storage Agreement</description>
    <label>Storage Agreement Signed?</label>
    <type>Checkbox</type>
</CustomField>