unpackaged/main/default/objects/Account/fields/Target_Market__c.field-meta.xml
<CustomField>
    <fullName>Target_Market__c</fullName>
    <label>Target Market</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Market</valueSetName>
    </valueSet>
</CustomField>