unpackaged/main/default/objects/Account/fields/Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt__c</fullName>
    <description>Indicates if the Tax Schedule in GP is &quot;Exempt&quot;</description>
    <formula>TRIM(Tax_Schedule_ID__c) = &#39;EXEMPT&#39;</formula>
    <label>Tax Exempt</label>
    <type>Checkbox</type>
</CustomField>