unpackaged/main/default/objects/Account/fields/Tax_Schedule_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_Schedule_ID__c</fullName>
    <label>Tax Schedule ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>