unpackaged/main/default/objects/Account/fields/Total_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Due__c</fullName>
    <formula>X60_and_Over_Due__c + Under_60_Due__c + Under_30_Due__c + Current_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total A/R balance due (updated from GP)</inlineHelpText>
    <label>Total Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>