unpackaged/main/default/objects/Account/fields/Total_Sales_3_Years_Ago__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_3_Years_Ago__c</fullName>
    <label>Sales 3 FY Ago</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>