unpackaged/main/default/objects/Account/fields/Total_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales__c</fullName>
    <description>The total of all documents from the ERP (Dynamics GP)</description>
    <label>Total Sales $</label>
    <summarizedField>Sales_Document__c.Doc_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_Document__c.Voided__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Document__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>