unpackaged/main/default/objects/Account/fields/Track_Account__c.field-meta.xml
<CustomField>
    <fullName>Track_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For tracking accounts with reports</description>
    <label>Track Account</label>
    <type>Checkbox</type>
</CustomField>