unpackaged/main/default/objects/Account/fields/Transfer__c.field-meta.xml
<CustomField>
    <fullName>Transfer__c</fullName>
    <formula>IF( (ISBLANK( Previous_Rep__c )= True), false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transfer</label>
    <type>Checkbox</type>
</CustomField>