unpackaged/main/default/objects/Account/fields/Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Date__c</fullName>
    <description>The Date the Account was transferred from Previous Rep to Current Rep</description>
    <inlineHelpText>The Date the Account was transferred from Previous Rep to Current Rep</inlineHelpText>
    <label>Transfer Date</label>
    <type>Date</type>
</CustomField>