unpackaged/main/default/objects/Account/fields/Under_30_Due__c.field-meta.xml
<CustomField>
    <fullName>Under_30_Due__c</fullName>
    <description>AGPERAMT_2</description>
    <label>Under 30 Due</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>