unpackaged/main/default/objects/Account/fields/Under_60_Due__c.field-meta.xml
<CustomField>
    <fullName>Under_60_Due__c</fullName>
    <description>AGPERAMT_3</description>
    <label>Under 60 Due</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>