unpackaged/main/default/objects/Account/fields/Valley_Green_Customer__c.field-meta.xml
<CustomField>
    <fullName>Valley_Green_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Lead Account is a Valley Green Prospect or Customer</description>
    <inlineHelpText>Indicates if the Lead Account is a Valley Green Prospect or Customer</inlineHelpText>
    <label>Valley Green Customer?</label>
    <type>Checkbox</type>
</CustomField>