unpackaged/main/default/objects/Account/fields/Verified_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Verified_Latitude__c</fullName>
    <description>Verified Latitude for incorrect Geocodes for Salesforce Maps</description>
    <label>Verified Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>