unpackaged/main/default/objects/Account/fields/Verified_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Verified_Longitude__c</fullName>
    <description>Verified Latitude for incorrect Geocodes for Salesforce Maps</description>
    <label>Verified Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>