unpackaged/main/default/objects/Account/fields/VGM_Member__c.field-meta.xml
<CustomField>
    <fullName>VGM_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this if the customer is also an active VGM Member</inlineHelpText>
    <label>VGM Member?</label>
    <type>Checkbox</type>
</CustomField>