unpackaged/main/default/objects/Account/fields/VGM_Number__c.field-meta.xml
<CustomField>
    <fullName>VGM_Number__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>The VGM Member Number if the Customer is an active VGM Member</inlineHelpText>
    <label>VGM Number</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>