unpackaged/main/default/objects/Account/fields/Walk_In_Customer__c.field-meta.xml
<CustomField>
    <fullName>Walk_In_Customer__c</fullName>
    <formula>Ship_Method__c == &#39;WI&#39; || Ship_Method__c = &#39;PU&#39; || Ship_Method__c = &#39;PSL&#39; || Ship_Method__c = &#39;PC&#39; || Ship_Method__c = &#39;PCG&#39; || Ship_Method__c = &#39;PUC&#39;</formula>
    <inlineHelpText>Indicates if the customer is walk-in by the GP/Salespad default Ship Method</inlineHelpText>
    <label>Walk-In Customer?</label>
    <type>Checkbox</type>
</CustomField>