unpackaged/main/default/objects/Account/fields/Work_Order_In_Progress2__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_In_Progress2__c</fullName>
    <label>Work Order In Progress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>