unpackaged/main/default/objects/Account/fields/X2019_CY_Sales__c.field-meta.xml
<CustomField>
    <fullName>X2019_CY_Sales__c</fullName>
    <description>Total of all 2019 (Calendar Year) Invoices</description>
    <label>2019 (CY)</label>
    <summarizedField>Sales_Document__c.Doc_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_Document__c.Doc_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2019</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Document__c.Doc_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2019</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Document__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>