unpackaged/main/default/objects/Account/fields/X60_and_Over_Due__c.field-meta.xml
<CustomField>
    <fullName>X60_and_Over_Due__c</fullName>
    <description>AGPERAMT_4</description>
    <label>60 and Over Due</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>