unpackaged/main/default/objects/Account/fields/Years_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Years_in_Business__c</fullName>
    <description>Credit Application Response - # of Years in Business</description>
    <label>Years in Business?</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>