unpackaged/main/default/objects/Account/fields/YOY_Sales__c.field-meta.xml
<CustomField>
    <fullName>YOY_Sales__c</fullName>
    <formula>IF(Thru_the_end_of_the_current_month__c &gt; 0 ||  Actual_FY_Sales__c &gt; 0,  Actual_FY_Sales__c - Thru_the_end_of_the_current_month__c , 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows current year sales vs. through this month a year ago</inlineHelpText>
    <label>FY vs. Prev FY This Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>