unpackaged/main/default/objects/Account/recordTypes/Athletic.recordType-meta.xml
<RecordType>
    <fullName>Athletic</fullName>
    <active>true</active>
    <label>Athletic</label>
</RecordType>