unpackaged/main/default/objects/Account/recordTypes/ENP.recordType-meta.xml
<RecordType>
    <fullName>ENP</fullName>
    <active>true</active>
    <description>ENP Accounts</description>
    <label>ENP</label>
</RecordType>