unpackaged/main/default/objects/Account/recordTypes/Lead.recordType-meta.xml
<RecordType>
    <fullName>Lead</fullName>
    <active>true</active>
    <description>An Account that is still a Lead (ie no ATS Customer#)</description>
    <label>Lead</label>
</RecordType>