unpackaged/main/default/objects/Account/recordTypes/Parent.recordType-meta.xml
<RecordType>
    <fullName>Parent</fullName>
    <active>true</active>
    <description>Parent/Company Account</description>
    <label>Parent</label>
</RecordType>