unpackaged/main/default/objects/Account/recordTypes/Steel_Green.recordType-meta.xml
<RecordType>
    <fullName>Steel_Green</fullName>
    <active>true</active>
    <label>Steel Green Customer</label>
</RecordType>