unpackaged/main/default/objects/Account/recordTypes/Steel_Green_Dealer.recordType-meta.xml
<RecordType>
    <fullName>Steel_Green_Dealer</fullName>
    <active>true</active>
    <description>Steel Green Dealer Accounts</description>
    <label>Steel Green Dealer</label>
</RecordType>