unpackaged/main/default/objects/Account/recordTypes/Steel_Green_Lead.recordType-meta.xml
<RecordType>
    <fullName>Steel_Green_Lead</fullName>
    <active>true</active>
    <description>A Lead Account that has not yet purchased anything as a Customer</description>
    <label>Steel Green Lead</label>
</RecordType>