unpackaged/main/default/objects/Account/validationRules/Paperless_Invoices_Requires_Billing_Emai.validationRule-meta.xml
<ValidationRule>
    <fullName>Paperless_Invoices_Requires_Billing_Emai</fullName>
    <active>true</active>
    <description>Billing Email (syncs to Primary Address Email To in GP/Salespad) is required for Paperless Invoices to be Selected</description>
    <errorConditionFormula>ISBLANK(Billing_Email__c) &amp;&amp;  (Billing_Do_Not_Mail__c = TRUE)</errorConditionFormula>
    <errorDisplayField>Billing_Email__c</errorDisplayField>
    <errorMessage>If you are signing up for Paperless Invoices, please be sure to include the Billing Email Address.  If you chose this option in error, please uncheck &quot;Paperless Invoices&quot; and Save Changes.</errorMessage>
</ValidationRule>