unpackaged/main/default/objects/Account/validationRules/Phone_Number_has_Ten_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_has_Ten_Digits</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED(Phone) &amp;&amp; NOT(ISBLANK(Phone)) &amp;&amp; NOT(REGEX(Phone, &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Phone numbers should be in this format: (999) 999-9999.   You may type numbers only with no spaces or formatting, but be sure it is 10 digits.</errorMessage>
</ValidationRule>