unpackaged/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>R_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>notContain</operation>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Customer,Account.Lead</value>
    </filters>
    <label>All Accounts</label>
    <sharedTo>
        <group>Collections</group>
        <role>HR_Manager</role>
        <role>Marketing_Manager</role>
        <role>Sales_Manager</role>
    </sharedTo>
</ListView>