unpackaged/main/default/objects/Account/listViews/ATS_Sports_Customers.listView-meta.xml
<ListView>
    <fullName>ATS_Sports_Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Sales_Rep__c</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Level__c</columns>
    <columns>Zone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Sales_Rep__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>Class__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_STATE</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Customer</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>-S-</value>
    </filters>
    <label>ATS Sports Accounts - Service</label>
    <sharedTo>
        <group>Field_Evaluation_Owner</group>
        <group>Sales_Managers</group>
    </sharedTo>
</ListView>