unpackaged/main/default/objects/Account/listViews/Collections_Possible_Write_Off.listView-meta.xml
<ListView>
    <fullName>Collections_Possible_Write_Off</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Contact_Person__c</columns>
    <columns>Past_Due_Total__c</columns>
    <columns>X60_and_Over_Due__c</columns>
    <columns>Last_Payment_Date__c</columns>
    <columns>Last_Payment_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Possible_Write_off__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Collections - Possible Write Offs</label>
    <sharedTo>
        <group>Collections</group>
    </sharedTo>
</ListView>