unpackaged/main/default/objects/Account/listViews/Copy_of_ATS_Sports_Customers.listView-meta.xml
<ListView>
    <fullName>Copy_of_ATS_Sports_Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Sales_Rep__c</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Level__c</columns>
    <columns>Zone__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Sales_Rep__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>Class__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_STATE</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>Target_Market__c</field>
        <operation>includes</operation>
        <value>Sports Fields</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Customer</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>Level__c</field>
        <operation>contains</operation>
    </filters>
    <label>My ATS Sports Customers</label>
    <sharedTo>
        <group>Sales_Reps</group>
        <group>Sports_Turf_Sales</group>
    </sharedTo>
</ListView>