unpackaged/main/default/objects/Account/listViews/Customer_at_GIE.listView-meta.xml
<ListView>
    <fullName>Customer_at_GIE</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Customer__c</columns>
    <columns>GIE_Lead__c</columns>
    <columns>Purchased_Steel_Green_Unit__c</columns>
    <columns>Sales_Rep__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GIE_Lead__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Customer,Account.Lead</value>
    </filters>
    <filters>
        <field>Customer__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Purchased_Steel_Green_Unit__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Current Customers at GIE</label>
    <sharedTo>
        <group>IT_Department</group>
        <group>Sales_Managers</group>
        <role>Marketing_Manager</role>
    </sharedTo>
</ListView>