unpackaged/main/default/objects/Account/listViews/Customers_with_Previous_Rep.listView-meta.xml
<ListView>
    <fullName>Customers_with_Previous_Rep</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Total_Sales_Two_Years_Ago__c</columns>
    <columns>Current_Year_FY_Sales__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Previous_Rep__c</columns>
    <columns>Transfer_Date__c</columns>
    <columns>R_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Customer</value>
    </filters>
    <filters>
        <field>Previous_Rep__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Previous_Rep__c</field>
        <operation>notContain</operation>
        <value>Inactive</value>
    </filters>
    <filters>
        <field>Sales_Rep__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>Previous_Rep__c</field>
        <operation>contains</operation>
    </filters>
    <label>Shared Customers</label>
    <sharedTo>
        <group>SF_Admins</group>
        <group>Sales_Managers</group>
    </sharedTo>
</ListView>