unpackaged/main/default/objects/Account/listViews/ENP_Accounts.listView-meta.xml
<ListView>
    <fullName>ENP_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.ENP</value>
    </filters>
    <label>ENP Accounts</label>
    <sharedTo>
        <group>ENP_Account_Management</group>
        <group>IT_Department</group>
    </sharedTo>
</ListView>