unpackaged/main/default/objects/Account/listViews/GIE_LEADS_Master_List.listView-meta.xml
<ListView>
    <fullName>GIE_LEADS_Master_List</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Sales_Rep__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Lead_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GIE_Lead__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Customer,Account.Lead</value>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_STATE</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>Sales_Rep__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
    </filters>
    <label>GIE LEADS Master List</label>
    <sharedTo>
        <group>IT_Department</group>
        <group>Sales_Managers</group>
        <role>Marketing_Manager</role>
    </sharedTo>
</ListView>