unpackaged/main/default/objects/Account/listViews/GIE_LEADS_Master_List_SGM.listView-meta.xml
<ListView>
    <fullName>GIE_LEADS_Master_List_SGM</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Lead_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GIE_Lead__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_STATE</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>Sales_Rep__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>contains</operation>
        <value>smith,quin</value>
    </filters>
    <label>GIE LEADS Master List - SGM</label>
    <sharedTo>
        <group>IT_Department</group>
        <group>Steel_Green_Account_Management</group>
    </sharedTo>
</ListView>